--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-
-    </div>
-
-    <p>
-
-    </p>
-
-    <button>
-        
-    </button>
+    <div class="div1_container"> <div class="div1">div1</div> </div>
+    <div class="div2_container"> <div class="div2">div2</div> </div>
+    <div class="div3_container"> <div class="div3">div3</div> </div>
 </body>
 </html>
